[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackjack-gui"
description = "A game of Blackjack with graphical user interface."
authors = [{name = "Simo Tukiainen", email = "tukiains@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "pillow",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "mypy",
  "pytest",
  "pytest-flakefinder",
  "ruff",
  "types-Pillow",
]
dev = [
  "pre-commit",
  "release-version",
]

[project.scripts]
blackjack = "blackjack_gui.blackjack:main"

[project.urls]
Homepage = "https://github.com/tukiains/blackjack-gui"
Documentation = "https://github.com/tukiains/blackjack-gui"
Repository = "https://github.com/tukiains/blackjack-gui"
Changelog = "https://github.com/tukiains/blackjack-gui/CHANGELOG.md"

[tool.hatch.version]
path = "blackjack_gui/version.py"

[tool.mypy]
check_untyped_defs = true

[tool.release-version]
filename = "blackjack_gui/version.py"
pattern = ["__version__ = \"(?P<major>\\d+).(?P<minor>\\d+).(?P<patch>\\d+)\""]
changelog = "CHANGELOG.md"

[tool.ruff]
line-length = 80

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
trailing_comma_inline_array = true
sort_inline_arrays = true
